fix test for all jdks